# ChatBI

./: .env.example  .gitignore  README.md  api_service.py  config.py  database.py  error_analyzer.py  field_matcher.py  indicator_knowledge.py  indicators.json  join_resolver.py  llm_client.py  main.py  prompt_builder.py  pyproject.toml  query_parser.py  result_formatter.py  schema_generator.py  schema_linker.py  table_retriever.py  text2sql_v0.py  text2sql_v1.py  text2sql_v2.py
docs/: database_setup.md  project_blueprint.md  text2sql_prompt.md
docs/updates/: 2026-06-24-business-data-environment.md  2026-06-24-project-blueprint.md  2026-06-25-database-setup-refinement.md  2026-06-25-sql-diagnostics-rules.md  2026-06-25-text2sql-evaluation-benchmark.md  2026-06-25-text2sql-query-pipeline.md  2026-06-26-indicator-knowledge-injection.md  2026-06-26-query-api-service.md  2026-06-26-streaming-query-interface.md  2026-06-27-query-web-console.md  2026-06-29-schema-metadata-generator.md  2026-07-01-schema-retrieval-field-matching.md  2026-07-02-join-path-resolution.md  2026-07-02-schema-linking-pipeline.md
scripts/: schema_generator.py
sql/: 01_schema.sql  02_seed_data.sql  03_validation_queries.sql  04_reset_data.sql
static/: index.html
