[project]
name = "chatbi"
version = "0.1.0"
description = "Enterprise ChatBI project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.1",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.3",
    "onnxruntime<1.24",
    "openai>=2.0.0",
    "pydantic>=2.13.4",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.49.0",
]
